build for R v4.0.2 lidR v3.0.2

--- a/vignettes/intro_example.Rmd
+++ b/vignettes/intro_example.Rmd
@@ -32,7 +32,7 @@ library(ggplot2)
 theme_set( theme_bw() )
 
 # Data directory on local machine
-DATA_DIR <- here("..", "test_data", "AHD")
+DATA_DIR <- here("..", "test_data", "Bega")
 
 ```
 
